# quaid

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
quaid-app/: Cargo.toml
quaid-app/src/: lib.rs
quaid-core/: Cargo.toml
quaid-core/src/: credentials.rs  lib.rs
quaid-core/src/embeddings/: chunker.rs  mod.rs  model.rs
quaid-core/src/pipeline/: config.rs  messages.rs  mod.rs  stages.rs
quaid-core/src/providers/: mod.rs
quaid-core/src/providers/chatgpt/: mod.rs  types.rs
quaid-core/src/providers/claude/: mod.rs  types.rs
quaid-core/src/providers/fathom/: mod.rs  types.rs
quaid-core/src/providers/granola/: mod.rs  types.rs
quaid-core/src/storage/: compactor.rs  duckdb.rs  embeddings.rs  mod.rs  parquet.rs  traits.rs
src/: main.rs
src/commands/: auth.rs  compact.rs  export.rs  list.rs  mod.rs  pull.rs  search.rs  stats.rs
