[workspace]
resolver = "2"
members = ["quaid-core", "quaid-app"]

[package]
name = "quaid"
version = "0.1.0"
edition = "2021"
description = "Get your chats back"
license = "MIT"
repository = "https://github.com/vicentelyrio/quaid"

[[bin]]
name = "quaid"
path = "src/main.rs"

[dependencies]
quaid-core = { path = "quaid-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
