[package]
name = "quaid-core"
version = "0.1.0"
edition = "2021"
description = "Core library for quaid - chat extraction and storage"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Browser automation
chromiumoxide = { version = "0.8", features = ["tokio", "tokio-runtime"], default-features = false }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Secure credential storage
keyring = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# System paths
dirs = "5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockall = "0.13"
wiremock = "0.6"
